--- a/src/scss/_components/search/_base.scss
+++ b/src/scss/_components/search/_base.scss
@@ -9,6 +9,15 @@
       padding-left: 16px;
       padding-right: 16px;
     }
+
+    &--1,
+    &--2,
+    &--3 {
+      @include respond(max-small) {
+        padding-left: 0;
+        padding-right: 0;
+      }
+    }
   }
 
   &__bg {
@@ -21,16 +30,8 @@
     background-image: url('../img/img-bg.png');
     background-repeat: no-repeat;
     background-position: bottom center;
-
-    img {
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      object-position: center;
+    @include respond(max-small) {
+      display: none;
     }
   }
 
@@ -50,12 +51,17 @@
     &-1 {
       padding-bottom: 60px;
       @include respond(max-small) {
-        padding-bottom: 30px;
+        padding-bottom: 20px;
       }
     }
   }
 
   &__pagination {
+    @include respond(max-small) {
+      display: flex;
+      justify-content: center;
+    }
+
     &-btn {
       display: inline-flex;
       align-items: center;
@@ -70,6 +76,11 @@
       font-size: 16px;
       font-weight: 500;
       @include transition(background-color, color);
+      @include respond(max-small) {
+        width: 100%;
+        max-width: 125px;
+        margin-right: 18px;
+      }
 
       &:last-of-type {
         margin-right: 0;
@@ -86,6 +97,12 @@
         color: $c-white;
         @include transition(background-color, color);
       }
+
+      span {
+        @include respond(max-small) {
+          display: none;
+        }
+      }
     }
   }
 
@@ -100,8 +117,17 @@
       width: 100%;
       max-width: calc(100% - 375px);
       @include respond(max-small) {
+        display: flex;
+        align-items: center;
+        justify-content: center;
         max-width: 100%;
-        margin-bottom: 30px;
+        min-height: 50px;
+        margin-top: 12px;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        border-top: 1px solid #cdd7df;
+        border-bottom: 1px solid #cdd7df;
+        text-align: center;
       }
     }
 
@@ -111,7 +137,7 @@
       justify-content: flex-end;
       width: 375px;
       @include respond(max-small) {
-        width: 100%;
+        display: none;
       }
     }
 
@@ -119,10 +145,12 @@
       padding-bottom: 26px;
       line-height: 1;
       font-size: 36px;
-      @include respond(max-extra-small) {
-        margin-top: 30px;
+      @include respond(max-small) {
+        padding-bottom: 0;
+        padding-left: 5px;
+        padding-right: 5px;
         line-height: 1.4;
-        font-size: 30px;
+        font-size: 18px;
       }
     }
 
@@ -130,6 +158,9 @@
       height: 1px;
       border: none;
       background-color: #cdd7df;
+      @include respond(max-small) {
+        display: none;
+      }
     }
 
     img {
@@ -155,8 +186,10 @@
             color: #d72d42;
             font-size: 18px;
             font-weight: 500;
-            @include respond(max-extra-small) {
-              font-size: 16px;
+            @include respond(max-small) {
+              padding-bottom: 20px;
+              text-align: center;
+              font-size: 14px;
             }
           }
         }
@@ -168,38 +201,69 @@
           @include respond(max-large) {
             flex-wrap: wrap;
           }
+          @include respond(max-small) {
+            width: 100%;
+            flex-wrap: nowrap;
+          }
+
+          > div {
+            @include respond(max-small) {
+              display: flex;
+              width: 100%;
+            }
+          }
 
           a {
-            display: inline-flex;
             align-items: center;
             justify-content: center;
-            height: 50px;
-            padding: 0 43px;
-            margin-right: 17px;
-            border-width: 2px;
-            border-style: solid;
-            background-color: transparent;
             font-size: 24px;
             font-weight: 600;
-            @include transition(border-color, color);
+            @include transition(border-color, color, background-color);
             @include respond(max-large) {
               margin-bottom: 5px;
             }
-
-            &:first-of-type {
-              border-color: #0a1723;
-              color: #0a1723;
-
-              &:hover {
-                border-color: #b62438;
-                color: #b62438;
-                @include transition(border-color, color);
-              }
-            }
-
-            &:last-of-type {
+            @include respond(medium) {
+              display: inline-flex;
+              height: 50px;
+              padding: 0 43px;
+              margin-right: 17px;
+              border-width: 2px;
+              border-style: solid;
               border-color: #95a6b2;
               color: #95a6b2;
+              background-color: transparent;
+            }
+            @include respond(max-small) {
+              display: flex;
+              width: 50%;
+              height: 42px;
+              padding: 0;
+              margin: 0;
+              color: #b3bac1;
+              font-size: 16px;
+              background-color: #f3f6f9;
+              border-top-left-radius: 10px;
+              border-top-right-radius: 10px;
+              border-bottom: 6px solid #d5dbe2;
+            }
+
+            &.is-active {
+              @include respond(medium) {
+                border-color: #0a1723;
+                color: #0a1723;
+
+                &:hover {
+                  border-color: #b62438;
+                  color: #b62438;
+                  @include transition(border-color, color);
+                }
+              }
+              @include respond(max-small) {
+                color: #28323b;
+                background-color: transparent;
+                border-color: transparent;
+                @include transition(background-color);
+              }
             }
           }
 
@@ -212,6 +276,7 @@
             font-size: 18px;
             font-weight: 600;
             @include respond(max-small) {
+              display: none;
               font-size: 16px;
             }
             @include respond(max-large) {
@@ -236,6 +301,29 @@
         flex-wrap: wrap;
       }
 
+      &--badge {
+        display: none;
+        @include respond(max-small) {
+          display: flex;
+          justify-content: center;
+          padding-bottom: 20px;
+
+          p {
+            display: flex;
+            align-items: center;
+            justify-content: flex-end;
+            text-align: right;
+            color: #f98911;
+            font-size: 16px;
+            font-weight: 600;
+
+            i {
+              margin-right: 10px;
+            }
+          }
+        }
+      }
+
       > div {
         &:nth-of-type(1) {
           width: 441px;
@@ -251,7 +339,7 @@
             @include respond(max-medium) {
               margin-left: auto;
               margin-right: auto;
-              margin-bottom: 30px;
+              margin-bottom: 20px;
             }
           }
         }
@@ -263,6 +351,12 @@
           max-width: calc(100% - 441px);
           @include respond(max-medium) {
             max-width: 100%;
+          }
+
+          > div {
+            @include respond(max-small) {
+              width: 100%;
+            }
           }
         }
       }
@@ -276,6 +370,9 @@
         background-color: #cdd7df;
         margin-left: auto;
         margin-bottom: 24px;
+        @include respond(max-small) {
+          display: none;
+        }
       }
 
       a {
@@ -302,6 +399,9 @@
         &:first-of-type {
           background-color: #95a6b2;
           color: $c-white;
+          @include respond(max-small) {
+            display: none;
+          }
 
           &:hover {
             background-color: #d72d42;
@@ -318,6 +418,13 @@
           margin-right: 0;
           background-color: #f3f6f9;
           color: #95a6b2;
+          @include respond(max-small) {
+            display: flex;
+            max-width: 285px;
+            padding: 0 5px;
+            margin-left: auto;
+            margin-right: auto;
+          }
 
           &:hover {
             background-color: #95a6b2;
@@ -337,6 +444,9 @@
     &-footer {
       padding-top: 60px;
       padding-bottom: 60px;
+      @include respond(max-small) {
+        display: none;
+      }
 
       p {
         color: #4f6a7a;
@@ -453,6 +563,10 @@
     align-items: flex-end;
     flex-direction: column;
     padding-top: 12px;
+    @include respond(max-small) {
+      padding-left: 15px;
+      padding-right: 15px;
+    }
 
     hr {
       width: 100%;
@@ -460,6 +574,9 @@
       height: 1px;
       border: none;
       background-color: #cdd7df;
+      @include respond(max-small) {
+        display: none;
+      }
     }
 
     > div {
@@ -467,8 +584,9 @@
       flex-direction: column;
       align-items: flex-end;
       width: 100%;
-      @include respond(max-extra-small) {
+      @include respond(max-small) {
         flex-wrap: wrap;
+        justify-content: space-between;
       }
 
       &:last-of-type {
@@ -486,8 +604,10 @@
         line-height: 1;
         font-size: 72px;
         font-weight: bold;
-        @include respond(max-extra-small) {
-          font-size: 50px;
+        @include respond(max-small) {
+          justify-content: space-between;
+          width: 100%;
+          font-size: 48px;
         }
 
         span {
@@ -497,7 +617,7 @@
           font-size: 24px;
           font-weight: normal;
           @include respond(max-extra-small) {
-            font-size: 20px;
+            font-size: 16px;
           }
         }
       }
@@ -513,10 +633,12 @@
         text-align: center;
         font-size: 18px;
         font-weight: 500;
-        @include respond(max-extra-small) {
+        @include respond(max-small) {
           display: flex;
+          height: 35px;
           margin: 0;
-          margin-bottom: 5px;
+          margin-bottom: 8px;
+          font-size: 12px;
         }
 
         &:last-of-type {
@@ -530,6 +652,11 @@
           border: 2px solid #95a6b2;
           background-color: transparent;
           @include transition(border, background-color, color);
+          @include respond(max-small) {
+            width: 100%;
+            max-width: 100%;
+            padding: 5px 0;
+          }
 
           &:hover {
             background-color: #95a6b2;
@@ -551,6 +678,10 @@
           background-color: #d72d42;
           color: $c-white;
           @include transition(border, background-color, color);
+          @include respond(max-small) {
+            width: 100%;
+            max-width: 100%;
+          }
 
           &:hover {
             background-color: transparent;
@@ -572,6 +703,22 @@
   &__table {
     width: 100%;
     max-width: 100%;
+    @include respond(max-small) {
+      table,
+      tbody,
+      tr, td, th {
+        display: block;
+      }
+
+      table {
+        padding-left: 15px;
+        padding-right: 15px;
+      }
+
+      thead {
+        display: none;
+      }
+    }
 
     table {
       width: 100%;
@@ -600,28 +747,52 @@
       padding-bottom: 26px;
       vertical-align: middle;
 
+      span {
+        display: none;
+        @include respond(max-small) {
+          display: block;
+          color: #55636e;
+          font-size: 12px;
+          font-weight: normal;
+        }
+      }
+
       &:first-of-type {
         color: #55636e;
         text-align: left;
         font-size: 16px;
         font-weight: normal;
-        @include respond(max-extra-small) {
-          font-size: 12px;
+        @include respond(max-small) {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          min-height: 57px;
+          padding: 5px 0;
+          border-top: 1px solid #cdd7df;
+          border-bottom: 1px solid #cdd7df;
         }
       }
       &:nth-of-type(2),
       &:nth-of-type(3) {
         color: #0a1723;
         font-size: 20px;
-        @include respond(max-extra-small) {
-          font-size: 12px;
-        }
       }
       &:last-of-type {
         font-size: 24px;
         font-weight: bold;
-        @include respond(max-extra-small) {
-          font-size: 14px;
+      }
+
+      &:nth-of-type(2),
+      &:nth-of-type(3),
+      &:nth-of-type(4) {
+        @include respond(max-small) {
+          display: inline-flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: center;
+          width: calc((100% / 3) - 3px);
+          min-height: 78px;
+          padding: 5px 0;
         }
       }
 
@@ -635,10 +806,114 @@
       img {
         margin-right: 16px;
         vertical-align: middle;
-        @include respond(max-extra-small) {
-          display: none;
+      }
+    }
+  }
+
+  &__collapse {
+    @include respond(max-small) {
+      display: flex;
+      flex-direction: column;
+      margin-top: 16px;
+      border-top: 1px solid #cdd7df;
+      border-bottom: 1px solid #cdd7df;
+    }
+
+    &-wrapper {
+      border-bottom: 1px solid #cdd7df;
+
+      &--description {
+        display: none;
+        @include respond(max-small) {
+          display: block;
         }
       }
+      &--list {
+        .base__collapse-head {
+          display: none;
+          @include respond(max-small) {
+            display: flex;
+          }
+        }
+
+        .base__collapse-body {
+          @include respond(medium) {
+            display: block;
+          }
+        }
+      }
+
+      &:last-of-type {
+        border-bottom: none;
+      }
+
+      &.is-open {
+        .base__collapse-head {
+          span {
+            transform: rotate(-180deg);
+          }
+        }
+      }
+    }
+
+    &-head {
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      min-height: 35px;
+      padding: 5px 15px;
+
+      .is-open & {
+        .base__collapse-head {
+          span {
+            transform: rotate(-180deg);
+          }
+        }
+
+        .base__collapse-body {
+          display: block;
+        }
+      }
+
+      p {
+        color: #666f77;
+        font-size: 14px;
+      }
+
+      span {
+        color: #666f77;
+        font-size: 14px;
+      }
+    }
+
+    &-body {
+      display: none;
+      @include respond(max-small) {
+        padding: 22px 15px;
+        border-top: 1px solid #cdd7df;
+      }
+    }
+
+    &-desc {
+      color: #4f6a7a;
+      line-height: 1.8;
+      font-size: 16px;
+    }
+
+    &-btn {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 0 25px;
+      height: 42px;
+      margin-top: 30px;
+      border-radius: 5px;
+      background-color: #95a6b2;
+      color: #f3f6f9;
+      text-align: center;
+      font-size: 14px;
+      font-weight: 500;
     }
   }
 }
