--- a/src/scss/_components/search/_product.scss
+++ b/src/scss/_components/search/_product.scss
@@ -2,9 +2,9 @@
 
 .product {
   .c-grid {
-    @include respond(max-extra-small) {
-      padding-left: 16px;
-      padding-right: 16px;
+    @include respond(max-small) {
+      padding-left: 0;
+      padding-right: 0;
     }
   }
 
@@ -26,20 +26,117 @@
       @include respond(medium) {
         padding-right: 15px;
       }
+      @include respond(max-small) {
+        padding-bottom: 50px;
+      }
     }
 
     &-right {
       @include respond(medium) {
         padding-left: 15px;
       }
+      @include respond(max-small) {
+        display: none;
+      }
+    }
+  }
+
+  .base__price {
+    display: none;
+    @include respond(max-small) {
+      display: flex;
+
+      > div {
+        p {
+          padding-top: 0;
+        }
+      }
     }
   }
 
   &__box {
+    display: flex;
+    flex-direction: column;
     width: 100%;
     max-width: 530px;
     margin-left: auto;
     margin-right: auto;
+    @include respond(max-small) {
+      max-width: 100%;
+    }
+
+    &-mobile {
+      display: none;
+      @include respond(max-small) {
+        display: flex;
+        flex-direction: column;
+        padding-bottom: 30px;
+
+        > div {
+          display: flex;
+          width: 100%;
+        }
+
+        p {
+          width: 100%;
+          padding-bottom: 20px;
+          color: #d72d42;
+          text-align: center;
+          font-size: 14px;
+          font-weight: 500;
+        }
+
+        a {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          width: 50%;
+          height: 42px;
+          padding: 0;
+          margin: 0;
+          color: #b3bac1;
+          font-size: 16px;
+          font-weight: 600;
+          background-color: #f3f6f9;
+          border-top-left-radius: 10px;
+          border-top-right-radius: 10px;
+          border-bottom: 6px solid #d5dbe2;
+          @include transition(border-color, color, background-color);
+
+          &.is-active {
+            @include respond(max-small) {
+              color: #28323b;
+              background-color: transparent;
+              border-color: transparent;
+              @include transition(background-color);
+            }
+          }
+        }
+      }
+    }
+
+    &-badge {
+      display: none;
+      @include respond(max-small) {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-align: right;
+        color: #f98911;
+        font-size: 18px;
+        font-weight: 600;
+        @include respond(max-small) {
+          font-size: 16px;
+        }
+
+        i {
+          margin-right: 18px;
+          @include respond(max-small) {
+            margin-right: 10px;
+          }
+        }
+      }
+    }
 
     &-head {
       display: flex;
@@ -47,6 +144,9 @@
       align-items: center;
       justify-content: space-between;
       padding-bottom: 41px;
+      @include respond(max-small) {
+        display: none;
+      }
 
       p {
         white-space: nowrap;
@@ -83,7 +183,7 @@
       align-items: flex-start;
       height: 310px;
       margin-bottom: 48px;
-      @include respond(max-extra-small) {
+      @include respond(max-small) {
         flex-wrap: wrap;
         height: auto;
         margin-bottom: 30px;
@@ -96,22 +196,31 @@
           width: 100%;
         }
 
+        &:nth-of-type(1) {
+          @include respond(max-small) {
+            width: 100%;
+          }
+        }
+
         &:nth-of-type(2) {
           display: flex;
           flex-direction: column;
           align-items: flex-end;
           justify-content: flex-end;
           padding-bottom: 40px;
+          @include respond(max-small) {
+            display: none;
+          }
         }
 
         img {
           display: block;
           max-width: 100%;
           max-height: 100%;
-          @include respond(max-extra-small) {
+          @include respond(max-small) {
             margin-left: auto;
             margin-right: auto;
-            margin-bottom: 30px;
+            margin-bottom: 20px;
           }
         }
       }
@@ -119,6 +228,9 @@
 
     &-body {
       padding-bottom: 39px;
+      @include respond(max-small) {
+        padding-bottom: 0;
+      }
 
       p {
         color: #4f6a7a;
@@ -136,10 +248,22 @@
           }
         }
       }
+
+      .product__box-link {
+        display: none;
+        @include respond(max-small) {
+          display: flex;
+          max-width: 100%;
+          margin-top: 30px;
+        }
+      }
     }
 
     &-footer {
       padding-bottom: 50px;
+      @include respond(max-small) {
+        padding-bottom: 0;
+      }
 
 
       ul {
@@ -160,6 +284,9 @@
 
           &:last-of-type {
             margin-bottom: 43px;
+            @include respond(max-small) {
+              margin-bottom: 0;
+            }
           }
         }
       }
@@ -179,6 +306,12 @@
       span {
         color: #4f6a7a;
         font-size: 16px;
+      }
+
+      a {
+        @include respond(max-small) {
+          display: none;
+        }
       }
     }
 
@@ -248,6 +381,79 @@
       &:active {
         background-color: #0a1723;
         @include transition(background-color);
+      }
+    }
+  }
+
+  &__collapse {
+    @include respond(max-small) {
+      display: flex;
+      flex-direction: column;
+      margin-top: 16px;
+      border-top: 1px solid #cdd7df;
+      border-bottom: 1px solid #cdd7df;
+    }
+
+    &-wrapper {
+      @include respond(max-small) {
+        border-bottom: 1px solid #cdd7df;
+      }
+
+      &:last-of-type {
+        border-bottom: none;
+      }
+
+      &.is-open {
+        .product__collapse-head {
+          span {
+            transform: rotate(-180deg);
+          }
+        }
+      }
+    }
+
+    &-head {
+      display: none;
+      @include respond(max-small) {
+        cursor: pointer;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        min-height: 35px;
+        padding: 5px 15px;
+
+        .is-open & {
+          .product__collapse-head {
+            span {
+              transform: rotate(-180deg);
+            }
+          }
+
+          .product__collapse-body {
+            display: block;
+          }
+        }
+
+        p {
+          color: #666f77;
+          font-size: 14px;
+        }
+
+        span {
+          color: #666f77;
+          font-size: 14px;
+        }
+      }
+    }
+
+    &-body {
+      display: none;
+      @include respond(medium) {
+        display: block;
+      }
+      @include respond(max-small) {
+        padding: 22px 15px;
+        border-top: 1px solid #cdd7df;
       }
     }
   }
