--- a/src/scss/_shared/_common.scss
+++ b/src/scss/_shared/_common.scss
@@ -19,6 +19,10 @@
       margin-top: 100px;
       margin-bottom: 100px;
     }
+    @include respond(max-extra-small) {
+      margin-top: 50px;
+      margin-bottom: 50px;
+    }
   }
 }
 // line :: end
